# xtuber

./: .gitignore  README.md  install-linux.sh  install-macos.sh  install-windows.bat  package.json  pnpm-lock.yaml  sea-config.json  svelte.config.js
.github/workflows/: release.yml  test.yml
src/: app.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: downloads.ts  youtube.ts
src/lib/components/ui/: Downloader.svelte  Format.svelte  index.ts
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/url/: +page.svelte
src/routes/url/[...url]/: +page.svelte
